# jitsi-lgpl-dependencies

./: .editorconfig  .gitignore  CMakeLists.txt  README-native.md  README.build-native  README.md  build-dir.properties  build.xml  pom.xml
.github/workflows/: deploy-debian.yml  maven-and-native.yml
cmake/: External_ffmpeg.cmake  External_lame.cmake  External_openh264.cmake  Findlibmp3lame.cmake  toolchain-i686.cmake
cmake/jnffmpeg/: CMakeLists.txt
cmake/jnffmpeg_oh264/: CMakeLists.txt
debian/: changelog  control  copyright  maven.ignoreRules  maven.rules  rules
resources/: deb-build.sh  deb-gen-source.sh  deb-prepare.sh  fetch-maven.sh  mac-cmake.sh
src/main/c/ffmpeg/: FFmpeg.c  FFmpeg.h
src/main/c/g722/: CMakeLists.txt  JNIDecoder.c  JNIDecoder.h  JNIEncoder.c  JNIEncoder.h  g722.c
src/main/c/org/jitsi/impl/neomedia/codec/: FFmpeg.c
src/main/c/org/jitsi/impl/neomedia/codec/audio/g722/: JNIDecoder.c  JNIEncoder.c
src/main/include/org/jitsi/impl/neomedia/codec/: FFmpeg.h
src/main/java/org/jitsi/impl/neomedia/codec/: FFmpeg.java
src/main/java/org/jitsi/impl/neomedia/codec/audio/g722/: JNIDecoder.java  JNIEncoder.java
src/main/java/org/jitsi/util/: JNIUtils.java
src/main/resources/darwin/: libjnffmpeg-no-openh264.jnilib  libjnffmpeg.jnilib
src/native/: build.xml
src/native/ffmpeg/: README
src/org/jitsi/impl/neomedia/codec/: FFmpeg.java
src/org/jitsi/impl/neomedia/codec/audio/g722/: JNIEncoder.java
